--- a/dev-ruby/sinatra/ChangeLog
+++ b/dev-ruby/sinatra/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sinatra
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.14 2011/02/21 06:56:57 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.15 2011/03/04 16:18:32 graaff Exp $
+
+*sinatra-1.2.0 (04 Mar 2011)
+
+  04 Mar 2011; Hans de Graaff <graaff@gentoo.org> +sinatra-1.2.0.ebuild:
+  Version bump.
 
 *sinatra-1.1.3 (21 Feb 2011)
 
