--- a/games-board/gnuchess/ChangeLog
+++ b/games-board/gnuchess/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/gnuchess
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/gnuchess/ChangeLog,v 1.19 2011/02/27 22:05:51 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/gnuchess/ChangeLog,v 1.20 2011/03/05 00:40:18 ranger Exp $
+
+  04 Mar 2011; Brent Baude <ranger@gentoo.org> gnuchess-5.08.ebuild:
+  stable ppc, bug 356481
 
   27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gnuchess-5.08.ebuild:
   Stable on amd64 wrt bug #356481
