--- a/games-fps/freedoom/ChangeLog
+++ b/games-fps/freedoom/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/freedoom
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/freedoom/ChangeLog,v 1.18 2011/02/27 21:45:28 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/freedoom/ChangeLog,v 1.19 2011/03/05 00:46:33 ranger Exp $
+
+  05 Mar 2011; Brent Baude <ranger@gentoo.org> freedoom-0.7.ebuild:
+  stable ppc, bug 356487
 
   27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> freedoom-0.7.ebuild:
   Stable on amd64 wrt bug #356487
