--- a/media-libs/exiftool/ChangeLog
+++ b/media-libs/exiftool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/exiftool
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.90 2011/03/01 19:00:34 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.91 2011/03/05 00:51:58 xmw Exp $
+
+  05 Mar 2011; Michael Weber <xmw@gentoo.org> exiftool-8.40.ebuild:
+  ppc/sparc stable (bug 356663)
 
 *exiftool-8.50 (01 Mar 2011)
 
