--- a/dev-ruby/rake-compiler/ChangeLog
+++ b/dev-ruby/rake-compiler/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rake-compiler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.28 2011/02/12 08:43:52 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.29 2011/03/05 07:18:06 graaff Exp $
+
+  05 Mar 2011; Hans de Graaff <graaff@gentoo.org>
+  rake-compiler-0.7.5.ebuild, rake-compiler-0.7.6.ebuild:
+  Move sparc keyword forward as seems to have been intended.
 
 *rake-compiler-0.7.6 (12 Feb 2011)
 
