--- a/dev-ruby/rake-compiler/ChangeLog
+++ b/dev-ruby/rake-compiler/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rake-compiler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.30 2011/03/05 07:18:43 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rake-compiler/ChangeLog,v 1.31 2011/03/05 07:27:51 graaff Exp $
+
+  05 Mar 2011; Hans de Graaff <graaff@gentoo.org>
+  rake-compiler-0.7.5.ebuild:
+  Strip testing and documentation tasks to create a stable candidate.
 
   05 Mar 2011; Hans de Graaff <graaff@gentoo.org>
   -rake-compiler-0.7.0.ebuild:
