--- a/dev-ruby/highline/ChangeLog
+++ b/dev-ruby/highline/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/highline
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/highline/ChangeLog,v 1.43 2011/01/16 09:02:42 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/highline/ChangeLog,v 1.44 2011/03/05 07:37:36 graaff Exp $
+
+  05 Mar 2011; Hans de Graaff <graaff@gentoo.org> highline-1.6.1.ebuild,
+  +highline-1.6.1-r1:
+  Revision bump to create a stable candidate without ruby19.
 
   16 Jan 2011; Hans de Graaff <graaff@gentoo.org> -highline-1.5.1.ebuild,
   -highline-1.5.2-r1.ebuild:
