--- a/x11-libs/qwt/ChangeLog
+++ b/x11-libs/qwt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qwt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.81 2011/03/05 11:34:43 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.82 2011/03/05 11:42:42 jlec Exp $
+
+  05 Mar 2011; Justin Lecher <jlec@gentoo.org> qwt-5.2.1.ebuild,
+  qwt-6.0.0_rc5.ebuild:
+  Moved from qt4 -> qt4-r2 eclass
 
 *qwt-6.0.0_rc5 (05 Mar 2011)
 
