--- a/dev-php/PEAR-PEAR/ChangeLog
+++ b/dev-php/PEAR-PEAR/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-PEAR
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.133 2011/03/05 09:49:50 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.134 2011/03/05 12:09:43 armin76 Exp $
+
+  05 Mar 2011; Raúl Porcel <armin76@gentoo.org> PEAR-PEAR-1.9.2.ebuild:
+  alpha/arm/ia64/s390/sh/sparc stable wrt #356893
 
   05 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
   PEAR-PEAR-1.9.2.ebuild:
