--- a/media-plugins/vdr-xineliboutput/ChangeLog
+++ b/media-plugins/vdr-xineliboutput/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-xineliboutput
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-xineliboutput/ChangeLog,v 1.64 2011/02/28 21:17:57 idl0r Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-xineliboutput/ChangeLog,v 1.65 2011/03/05 13:52:26 idl0r Exp $
+
+  05 Mar 2011; Christian Ruppert <idl0r@gentoo.org>
+  files/vdr-xineliboutput-9999-build-system.patch:
+  Sync patch against the latest CVS HEAD.
 
   28 Feb 2011; Christian Ruppert <idl0r@gentoo.org>
   files/vdr-xineliboutput-9999-build-system.patch:
