--- a/x11-apps/xrdb/ChangeLog
+++ b/x11-apps/xrdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xrdb
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.79 2011/02/23 16:29:38 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.80 2011/03/05 15:19:54 armin76 Exp $
+
+  05 Mar 2011; Raúl Porcel <armin76@gentoo.org> xrdb-1.0.8.ebuild:
+  alpha/arm/ia64/s390/sh/sparc stable wrt #354237
 
   23 Feb 2011; Jeroen Roovers <jer@gentoo.org> xrdb-1.0.8.ebuild:
   Stable for HPPA (bug #354237).
