--- a/app-arch/xz-utils/ChangeLog
+++ b/app-arch/xz-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/xz-utils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.24 2011/03/01 21:03:34 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.25 2011/03/05 17:25:38 xmw Exp $
+
+  05 Mar 2011; Michael Weber <xmw@gentoo.org> xz-utils-5.0.1.ebuild:
+  ppc/sparc stable (bug 355649)
 
   01 Mar 2011; Jeroen Roovers <jer@gentoo.org> xz-utils-5.0.1.ebuild:
   Stable for HPPA (bug #355649).
