--- a/media-plugins/gst-plugins-gnomevfs/ChangeLog
+++ b/media-plugins/gst-plugins-gnomevfs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-gnomevfs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-gnomevfs/ChangeLog,v 1.187 2011/02/27 15:28:37 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-gnomevfs/ChangeLog,v 1.188 2011/03/05 17:34:41 armin76 Exp $
+
+  05 Mar 2011; Raúl Porcel <armin76@gentoo.org>
+  gst-plugins-gnomevfs-0.10.31.ebuild:
+  alpha/ia64/sh/sparc stable wrt #353434
 
   27 Feb 2011; Brent Baude <ranger@gentoo.org>
   gst-plugins-gnomevfs-0.10.31.ebuild:
