--- a/x11-libs/libXp/ChangeLog
+++ b/x11-libs/libXp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXp/ChangeLog,v 1.37 2011/03/05 15:46:23 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXp/ChangeLog,v 1.38 2011/03/05 17:55:14 xarthisius Exp $
+
+  05 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> libXp-1.0.1.ebuild:
+  ppc64 stable wrt #354237
 
   05 Mar 2011; Raúl Porcel <armin76@gentoo.org> libXp-1.0.1.ebuild:
   alpha/arm/ia64/s390/sh/sparc stable wrt #354237
