--- a/dev-java/icedtea/ChangeLog
+++ b/dev-java/icedtea/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/icedtea
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/icedtea/ChangeLog,v 1.24 2011/02/18 12:42:27 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/icedtea/ChangeLog,v 1.25 2011/03/05 22:58:46 caster Exp $
+
+*icedtea-6.1.10 (05 Mar 2011)
+
+  05 Mar 2011; <caster@gentoo.org> -icedtea-6.1.9.6.ebuild,
+  +icedtea-6.1.10.ebuild, metadata.xml:
+  Version bump, bug #357153.
 
 *icedtea-6.1.9.7-r1 (18 Feb 2011)
 
