--- a/sci-geosciences/qgis/ChangeLog
+++ b/sci-geosciences/qgis/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-geosciences/qgis
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/qgis/ChangeLog,v 1.17 2011/01/23 17:15:18 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/qgis/ChangeLog,v 1.18 2011/03/06 09:17:46 jlec Exp $
+
+  06 Mar 2011; Justin Lecher <jlec@gentoo.org> qgis-1.5.0.ebuild:
+  Moved to slotted qwt
 
   23 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> qgis-1.5.0.ebuild,
   +files/qgis-1.5.0-qset.patch:
