--- a/media-gfx/kuickshow/ChangeLog
+++ b/media-gfx/kuickshow/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/kuickshow
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/kuickshow/ChangeLog,v 1.7 2011/02/27 14:27:49 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/kuickshow/ChangeLog,v 1.8 2011/03/06 13:33:09 fauli Exp $
+
+  06 Mar 2011; Christian Faulhammer <fauli@gentoo.org>
+  kuickshow-0.9.1.ebuild:
+  stable x86, bug 353127
 
   27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> kuickshow-0.9.1.ebuild:
   Stable on amd64 wrt bug #353127
