--- a/media-plugins/kipi-plugins/ChangeLog
+++ b/media-plugins/kipi-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/kipi-plugins
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.91 2011/03/06 20:48:44 dilfridge Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.92 2011/03/06 20:50:24 dilfridge Exp $
+
+  06 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  -kipi-plugins-1.8.0.ebuild:
+  Cleanup
 
   06 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   kipi-plugins-1.9.0.ebuild, +files/kipi-plugins-1.9.0-tests.patch:
