--- a/x11-drivers/nvidia-drivers/ChangeLog
+++ b/x11-drivers/nvidia-drivers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.268 2011/01/24 18:13:43 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.269 2011/03/07 09:32:02 hwoarang Exp $
+
+  07 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
+  nvidia-drivers-260.19.36.ebuild:
+  Stable on amd64 wrt bug #357409
 
 *nvidia-drivers-270.18 (24 Jan 2011)
 
