--- a/dev-php5/pecl-timezonedb/ChangeLog
+++ b/dev-php5/pecl-timezonedb/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/pecl-timezonedb
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-timezonedb/Attic/ChangeLog,v 1.25 2011/03/06 19:57:34 olemarkus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php5/cvs-repo/gentoo-x86/dev-php5/pecl-timezonedb/Attic/ChangeLog,v 1.26 2011/03/07 15:50:47 olemarkus Exp $
+
+*pecl-timezonedb-2011.3 (07 Mar 2011)
+
+  07 Mar 2011; <olemarkus@gentoo.org> -pecl-timezonedb-2011.2.ebuild,
+  +pecl-timezonedb-2011.3.ebuild:
+  Version bump
 
   06 Mar 2011; <olemarkus@gentoo.org> -pecl-timezonedb-2010.15.ebuild,
   -pecl-timezonedb-2011.1.ebuild:
