--- a/media-fonts/dejavu/ChangeLog
+++ b/media-fonts/dejavu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/dejavu
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.153 2011/03/06 11:58:54 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.154 2011/03/07 19:45:50 jer Exp $
+
+  07 Mar 2011; Jeroen Roovers <jer@gentoo.org> dejavu-2.32.ebuild:
+  Stable for HPPA (bug #357497).
 
   06 Mar 2011; Markos Chandras <hwoarang@gentoo.org> dejavu-2.32.ebuild:
   Stable on amd64 wrt bug #357497
