--- a/lxde-base/lxde-meta/ChangeLog
+++ b/lxde-base/lxde-meta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for lxde-base/lxde-meta
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/lxde-base/cvs-repo/gentoo-x86/lxde-base/lxde-meta/ChangeLog,v 1.30 2011/01/27 10:06:29 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/lxde-base/cvs-repo/gentoo-x86/lxde-base/lxde-meta/ChangeLog,v 1.31 2011/03/07 20:30:54 klausman Exp $
+
+  07 Mar 2011; Tobias Klausmann <klausman@gentoo.org>
+  lxde-meta-0.5.0-r5.ebuild:
+  Keyworded on alpha, bug #330911
 
   27 Jan 2011; Markos Chandras <hwoarang@gentoo.org> lxde-meta-0.5.0-r5.ebuild:
   Make dependencies over lxsession more flexible
