--- a/gnome-extra/libgsf/ChangeLog
+++ b/gnome-extra/libgsf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgsf
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.169 2011/02/26 16:49:18 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/libgsf/ChangeLog,v 1.170 2011/03/07 20:38:47 jer Exp $
+
+  07 Mar 2011; Jeroen Roovers <jer@gentoo.org> libgsf-1.14.19.ebuild:
+  Stable for HPPA (bug #353436).
 
   26 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   libgsf-1.14.19.ebuild:
