--- a/net-libs/gnet/ChangeLog
+++ b/net-libs/gnet/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gnet
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/gnet/ChangeLog,v 1.72 2011/02/23 23:08:54 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/gnet/ChangeLog,v 1.73 2011/03/07 20:41:55 jer Exp $
+
+  07 Mar 2011; Jeroen Roovers <jer@gentoo.org> gnet-2.0.8-r1.ebuild:
+  Stable for HPPA (bug #353436).
 
   23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gnet-2.0.8-r1.ebuild:
   Stable on amd64 wrt bug #353436
