--- a/net-nntp/pan/ChangeLog
+++ b/net-nntp/pan/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/pan
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.82 2011/02/24 20:41:18 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.83 2011/03/07 20:45:25 jer Exp $
+
+  07 Mar 2011; Jeroen Roovers <jer@gentoo.org> pan-0.133-r1.ebuild:
+  Stable for HPPA (bug #355719).
 
   24 Feb 2011; Thomas Kahle <tomka@gentoo.org> pan-0.133-r1.ebuild:
   x86 stable per bug 353436
