--- a/x11-proto/dmxproto/ChangeLog
+++ b/x11-proto/dmxproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/dmxproto
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/dmxproto/ChangeLog,v 1.50 2011/03/05 17:48:12 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/dmxproto/ChangeLog,v 1.51 2011/03/07 21:01:56 scarabeus Exp $
+
+  07 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org> -dmxproto-2.3.ebuild:
+  old
 
   05 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> dmxproto-2.3.1.ebuild:
   ppc64 stable wrt #354237
