--- a/x11-proto/xineramaproto/ChangeLog
+++ b/x11-proto/xineramaproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xineramaproto
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xineramaproto/ChangeLog,v 1.49 2011/03/05 16:01:22 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xineramaproto/ChangeLog,v 1.50 2011/03/07 20:54:11 scarabeus Exp $
+
+  07 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -xineramaproto-1.2.ebuild:
+  old
 
   05 Mar 2011; Raúl Porcel <armin76@gentoo.org> xineramaproto-1.2.1.ebuild:
   alpha/arm/ia64/s390/sh/sparc stable wrt #354237
