--- a/x11-apps/python-whiteboard/ChangeLog
+++ b/x11-apps/python-whiteboard/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/python-whiteboard
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/python-whiteboard/ChangeLog,v 1.1 2011/02/01 22:04:50 lxnay Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/python-whiteboard/ChangeLog,v 1.2 2011/03/07 22:33:18 jer Exp $
+
+  07 Mar 2011; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Fix lxnay e-mail address. Remove duplicate maintainer tag. Remove empty use
+  tag.
 
 *python-whiteboard-20101012 (01 Feb 2011)
 
