--- a/perl-core/JSON-PP/ChangeLog
+++ b/perl-core/JSON-PP/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/JSON-PP
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/JSON-PP/ChangeLog,v 1.3 2011/03/06 09:53:26 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/JSON-PP/ChangeLog,v 1.4 2011/03/08 08:12:17 tove Exp $
+
+*JSON-PP-2.271.50 (08 Mar 2011)
+
+  08 Mar 2011; Torsten Veller <tove@gentoo.org> +JSON-PP-2.271.50.ebuild:
+  Version bump
 
   06 Mar 2011; Fabian Groffen <grobian@gentoo.org> JSON-PP-2.271.40.ebuild:
   Added Prefix keywords, bug #357599
