--- a/perl-core/CPAN-Meta/ChangeLog
+++ b/perl-core/CPAN-Meta/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/CPAN-Meta
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/CPAN-Meta/ChangeLog,v 1.2 2011/03/06 10:00:08 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/CPAN-Meta/ChangeLog,v 1.3 2011/03/08 08:34:11 tove Exp $
+
+*CPAN-Meta-2.110.580 (08 Mar 2011)
+
+  08 Mar 2011; Torsten Veller <tove@gentoo.org> +CPAN-Meta-2.110.580.ebuild:
+  Version bump
 
   06 Mar 2011; Fabian Groffen <grobian@gentoo.org> CPAN-Meta-2.110.440.ebuild:
   Added Prefix keywords, bug #357599
