--- a/dev-ruby/ruby-inline/ChangeLog
+++ b/dev-ruby/ruby-inline/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-inline
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-inline/Attic/ChangeLog,v 1.36 2011/02/21 19:20:29 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/ruby-inline/Attic/ChangeLog,v 1.37 2011/03/08 08:57:24 tomka Exp $
+
+  08 Mar 2011; Thomas Kahle <tomka@gentoo.org> ruby-inline-3.8.6.ebuild:
+  x86 stable per bug 355299
 
   21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> ruby-inline-3.8.6.ebuild:
   Stable on amd64 wrt bug #355299
