--- a/dev-ruby/echoe/ChangeLog
+++ b/dev-ruby/echoe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/echoe
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/echoe/ChangeLog,v 1.24 2011/02/28 16:09:27 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/echoe/ChangeLog,v 1.25 2011/03/08 09:55:14 tomka Exp $
+
+  08 Mar 2011; Thomas Kahle <tomka@gentoo.org> echoe-4.3.1-r1.ebuild:
+  x86 stable per bug 357491
 
 *echoe-4.5.2 (28 Feb 2011)
 
