--- a/dev-ruby/redcloth/ChangeLog
+++ b/dev-ruby/redcloth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/redcloth
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/redcloth/ChangeLog,v 1.55 2011/03/05 07:41:15 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/redcloth/ChangeLog,v 1.56 2011/03/08 10:17:41 tomka Exp $
+
+  08 Mar 2011; Thomas Kahle <tomka@gentoo.org> redcloth-4.2.3-r1.ebuild:
+  x86 stable per bug 352483
 
   05 Mar 2011; Hans de Graaff <graaff@gentoo.org> redcloth-4.2.3-r1.ebuild:
   Add proper slot for rspec.
