--- a/dev-ruby/coderay/ChangeLog
+++ b/dev-ruby/coderay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/coderay
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.29 2011/01/28 10:09:05 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/coderay/ChangeLog,v 1.30 2011/03/08 10:45:20 tomka Exp $
+
+  08 Mar 2011; Thomas Kahle <tomka@gentoo.org> coderay-0.9.6.ebuild:
+  x86 stable per bug 353032
 
   28 Jan 2011; Hans de Graaff <graaff@gentoo.org> coderay-0.9.6.ebuild:
   Drop ruby19 to create new stable candidate.
