--- a/net-libs/libgadu/ChangeLog
+++ b/net-libs/libgadu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libgadu
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libgadu/ChangeLog,v 1.50 2011/03/07 09:20:35 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libgadu/ChangeLog,v 1.51 2011/03/08 15:56:06 jer Exp $
+
+  08 Mar 2011; Jeroen Roovers <jer@gentoo.org> libgadu-1.9.1.ebuild:
+  Stable for HPPA (bug #357289).
 
   07 Mar 2011; Markos Chandras <hwoarang@gentoo.org> libgadu-1.9.1.ebuild:
   Stable on amd64 wrt bug #357289
