--- a/sys-apps/fakeroot/ChangeLog
+++ b/sys-apps/fakeroot/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/fakeroot
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fakeroot/ChangeLog,v 1.57 2011/03/08 10:07:31 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fakeroot/ChangeLog,v 1.58 2011/03/08 17:19:28 jer Exp $
+
+  08 Mar 2011; Jeroen Roovers <jer@gentoo.org> fakeroot-1.14.4.ebuild:
+  Stable for HPPA (bug #357301).
 
   08 Mar 2011; Markos Chandras <hwoarang@gentoo.org> fakeroot-1.14.4.ebuild:
   Stable on amd64 wrt bug #357301
