--- a/media-video/mediainfo/ChangeLog
+++ b/media-video/mediainfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mediainfo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mediainfo/ChangeLog,v 1.15 2011/03/04 21:59:29 radhermit Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mediainfo/ChangeLog,v 1.16 2011/03/08 18:31:03 hwoarang Exp $
+
+  08 Mar 2011; Markos Chandras <hwoarang@gentoo.org> mediainfo-0.7.41.ebuild:
+  Stable on amd64 wrt bug #357575
 
 *mediainfo-0.7.42 (04 Mar 2011)
 
