--- a/app-crypt/WiRouterKeyRec/ChangeLog
+++ b/app-crypt/WiRouterKeyRec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/WiRouterKeyRec
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.18 2011/11/12 09:09:28 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.19 2011/12/11 18:38:26 ago Exp $
+
+  11 Dec 2011; Agostino Sarubbo <ago@gentoo.org> metadata.xml:
+  Take over maintainership, thanks Dane for proxying.
 
   12 Nov 2011; Markos Chandras <hwoarang@gentoo.org>
   WiRouterKeyRec-1.1.0.ebuild:
