--- a/x11-misc/util-macros/ChangeLog
+++ b/x11-misc/util-macros/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/util-macros
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.111 2011/08/20 09:17:00 chithanh Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/util-macros/ChangeLog,v 1.112 2011/12/11 19:57:36 chithanh Exp $
+
+*util-macros-1.16.0 (11 Dec 2011)
+
+  11 Dec 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +util-macros-1.16.0.ebuild:
+  Version bump.
 
   20 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   util-macros-1.15.0.ebuild:
