--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/portage/ChangeLog,v 1.926 2011/12/11 08:52:03 zmedico Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/portage/ChangeLog,v 1.927 2011/12/11 20:18:53 zmedico Exp $
+
+  11 Dec 2011; Zac Medico <zmedico@gentoo.org> portage-2.2.0_alpha80.ebuild,
+  portage-9999.ebuild:
+  For prefix installs, add EPREFIX to *_BINARY constants.
 
 *portage-2.2.0_alpha80 (11 Dec 2011)
 
