--- a/media-sound/glurp/ChangeLog
+++ b/media-sound/glurp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/glurp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/glurp/ChangeLog,v 1.32 2011/12/11 09:10:13 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/glurp/ChangeLog,v 1.33 2011/12/11 21:23:08 radhermit Exp $
+
+  11 Dec 2011; Tim Harder <radhermit@gentoo.org> -glurp-0.11.6-r2.ebuild,
+  -files/glurp-0.11.6-system_libmpd.patch:
+  Remove old.
 
   11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> glurp-0.12.3.ebuild:
   x86 stable wrt bug #392867
